--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "apollo-server-express": "^2.3.1",
+    "bcryptjs": "^2.4.3",
     "express": "^4.16.4",
     "graphql": "^14.0.2",
+    "mysql": "^2.16.0",
     "reflect-metadata": "^0.1.12",
-    "type-graphql": "^0.16.0"
+    "type-graphql": "^0.16.0",
+    "typeorm": "^0.2.11"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
