--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "typegraphql",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "ts-node-dev --respawn src/index.ts"
   },
