WIP: Added confirmation email

--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "graphql": "^14.0.2",
     "ioredis": "^4.3.0",
     "mysql": "^2.16.0",
+    "nodemailer": "^5.1.1",
     "reflect-metadata": "^0.1.12",
     "ts-node-dev": "^1.0.0-pre.32",
     "type-graphql": "^0.16.0",
-    "typeorm": "^0.2.11"
+    "typeorm": "^0.2.11",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@types/connect-redis": "0.0.8",
@@ -33,6 +35,7 @@
     "@types/graphql": "^14.0.4",
     "@types/ioredis": "^4.0.4",
     "@types/node": "^10.12.18",
+    "@types/nodemailer": "^4.6.5",
     "typescript": "^3.2.2"
   }
 }
