--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/ioredis": "^4.0.4",
     "@types/node": "^10.12.18",
     "@types/nodemailer": "^4.6.5",
+    "@types/uuid": "^3.4.4",
     "typescript": "^3.2.2"
   }
 }
